; ModuleID = '/home/carl/AnghaBench/mpv/osdep/win32/extr_pthread.c_pthread_once.c'
source_filename = "/home/carl/AnghaBench/mpv/osdep/win32/extr_pthread.c_pthread_once.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pthread_once(i32* %0, void ()* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca void ()*, align 8
  %5 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store void ()* %1, void ()** %4, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call i32 @InitOnceBeginInitialize(i32* %6, i32 0, i64* %5, i32* null)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %11, label %9

9:                                                ; preds = %2
  %10 = call i32 (...) @abort() #3
  unreachable

11:                                               ; preds = %2
  %12 = load i64, i64* %5, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %18

14:                                               ; preds = %11
  %15 = load void ()*, void ()** %4, align 8
  call void %15()
  %16 = load i32*, i32** %3, align 8
  %17 = call i32 @InitOnceComplete(i32* %16, i32 0, i32* null)
  br label %18

18:                                               ; preds = %14, %11
  ret i32 0
}

declare dso_local i32 @InitOnceBeginInitialize(i32*, i32, i64*, i32*) #1

; Function Attrs: noreturn
declare dso_local i32 @abort(...) #2

declare dso_local i32 @InitOnceComplete(i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
